--- a/roles/proxy/templates/httpNginx.j2
+++ b/roles/proxy/templates/httpNginx.j2
@@ -7,8 +7,18 @@ server {
   listen 80;
   server_name {{server_name}};
 
+  location /ws {
+      proxy_pass http://127.0.0.1:3000;
+      # this magic is needed for WebSocket
+      proxy_http_version  1.1;
+      proxy_set_header    Upgrade $http_upgrade;
+      proxy_set_header    Connection "upgrade";
+      proxy_set_header    Host $http_host;
+      proxy_set_header    X-Real-IP $remote_addr;
+  }
+
   location / {
-    proxy_pass http://hypertext4:3000;
+    proxy_pass http://127.0.0.1:3000;
   }
 }
 
