--- a/roles/proxy/templates/httpsNginx.j2
+++ b/roles/proxy/templates/httpsNginx.j2
@@ -11,13 +11,13 @@ server {
 
 server {
   listen 443 ssl;
-  ssl_certificate /etc/letsencrypt/live/codefr33k.live/fullchain.pem; 
-  ssl_certificate_key /etc/letsencrypt/live/codefr33k.live/privkey.pem;
+  ssl_certificate /etc/letsencrypt/live/{{server_name}}/fullchain.pem; 
+  ssl_certificate_key /etc/letsencrypt/live/{{server_name}}/privkey.pem;
 
   server_name {{server_name}};
 
     location /ws {
-        proxy_pass http://localhost:3000;
+        proxy_pass http://127.0.0.1:3000;
         # this magic is needed for WebSocket
         proxy_http_version  1.1;
         proxy_set_header    Upgrade $http_upgrade;
@@ -27,7 +27,7 @@ server {
     }
 
   location / {
-    proxy_pass http://localhost:3000;
+    proxy_pass http://127.0.0.1:3000;
   }
   location ~ /.well-known {
     allow all;
